2002-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.c (usage):
	(main):
	cleaned up usage and error messages
	use short option names in usage message an man page synopsis
	all options are case sensitive
	do not mention the "-" style long options in the man page; instead use
	the "--" style

	* fvwm/add_window.c (setup_frame_window):
	* fvwm/events.c (HandleMapNotify):
	* fvwm/eventmask.h (XEVMASK_FRAMEW_RECAPTURE):
	fixed empty decorations after recapture

	* fvwm/geometry.c (get_icon_geometry):
	* fvwm/icons.c (clear_icon):
	fixed icon jumping to 0 0 when the icon layout changes after the icon
	has been moved manually

	* fvwm/move_resize.c (__move_icon):
	fixed MoveToPage with icons

2002-11-09  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftGetRotatedFont):
	(FftGetFont):
	* libs/Fft.h:
	Check the return result of FftPatternGetMatrix

	* libs/Flocale.h:
	* libs/PictureBase.h:
	Added two macro

2002-11-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/ewmh_conf.c (set_state_workaround):
	* fvwm/functable.c (func_table):
	* fvwm/update.c (apply_window_updates):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/ewmh_events.c (ewmh_WMDesktop):
	(ewmh_WMStateSticky):
	* fvwm/conditional.c (CreateConditionMask):
	(CreateConditionMask):
	* fvwm/gnome.c (GNOME_SetHints):
	(GNOME_GetStyle):
	(GNOME_HandlePropRequest):
	* fvwm/placement.c (SmartPlacement):
	(get_next_x):
	(test_fit):
	(get_next_y):
	(PlaceWindow):
	* fvwm/session.c (SaveWindowStates):
	(MatchWinToSM):
	* fvwm/ewmh.c (check_desk):
	(EWMH_SetWMDesktop):
	(ewmh_ComputeAndSetWorkArea):
	(ewmh_HandleDynamicWorkArea):
	(ewmh_HandleDesktop):
	(ewmh_HandleDock):
	(ewmh_HandleMenu):
	(ewmh_HandleToolBar):
	* fvwm/virtual.c (UnmapDesk):
	(MapDesk):
	(MoveViewport):
	(MoveViewport):
	(do_move_window_to_desk):
	* fvwm/icons.c (setup_icon_title_size):
	(DrawIconTitleWindow):
	(AutoPlaceIcon):
	(Iconify):
	* fvwm/borders.c (is_button_toggled):
	(get_common_decorations):
	(border_draw_title_stick_lines):