@@ -1,3 +1,8 @@
+2002-11-11  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/fvwm.c (usage):
+	polished usage message
+
 2002-11-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/fvwm.c (usage):
